fixed menu z-index, preview spacing, and changed to textareas

--- a/client/src/components/shared/experience_preview_container/experience_preview_container.css
+++ b/client/src/components/shared/experience_preview_container/experience_preview_container.css
@@ -5,7 +5,7 @@
 .experience-previews {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  grid-gap: 30px;
+  grid-gap: 15px;
 }
 
 .noResult {
